fixed line flicker, added shade cell fade-in, set canvas z-index to 2

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
 	border-radius: 15px;
 	overflow: hidden;
 	aspect-ratio: 1 / 1;
+	z-index: 2;
 	touch-action: none;
 	width: 50%;
 	height: 50%;
